# ResearchPilot-An-Agentic-Research-Assistant-for-Papers-and-Codebases

./: .dockerignore  Dockerfile  LICENSE  README.md  README_CH.md  demo.py  demo_app.py  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
.streamlit/: config.toml
docs/: architecture.md  demo_cases.md  demo_script.md  development_notes.md  framework_comparison.md  interview_guide.md  known_limitations.md  langgraph_comparison.md  langgraph_interview_qa.md  project_architecture.md
eval/: multiagent_eval_cases.jsonl
examples/: langgraph_real_paper_workflow_demo.py  langgraph_researchpilot_demo.py
src/research_pilot/: cli.py  config.py
src/research_pilot/agents/: code_answer_writer_agent.py  evidence_answer_writer_agent.py  llm_agent.py  research_planner_agent.py  task_summarizer_agent.py
src/research_pilot/api/: schemas.py  server.py
src/research_pilot/conversation/: memory_extractor.py  turn_memory.py
src/research_pilot/core/: agent_loop.py  context_manager.py  evidence.py  hooks.py  llm_client.py  observation.py  state.py  todo.py  tool.py  tool_runtime.py
src/research_pilot/evaluation/: multiagent_eval.py
src/research_pilot/graph/: graph_node.py  graph_runner.py  policy.py
src/research_pilot/memory/: __init__.py  long_term_memory.py
src/research_pilot/multiagent/: __init__.py  base_subagent.py  blackboard.py  trace_report.py
src/research_pilot/prompts/: agent_prompt.py  prompt_sections.py  (+1 more)
tests/: test_blackboard.py  test_graph_runner.py  test_llm_client.py  test_long_term_memory.py  test_subagent_logic.py  test_tool_runtime.py
(+31 files in other folders)
